@@ -171,3 +171,4 @@ Quiza solo el menu (y no esxdos handler , zxpand u otros) debe usar ZVFS. El res
 
 -Si ZX desktops activado. Pero cargo un driver de texto que pasará? Y sale habilitado? Y como se guardará la opción?
 
+-letras hotkey que se puedan indicar, en vez de con texto inverso, indicando cambio de tinta, como en Turbo Vision 
