@@ -38,6 +38,7 @@ Improved Debug I/O ports window: can now be backgrounded and it's reloaded conti
 Improved File spooling: delay can now be any value between 20 and 2000 ms (in increments of +20)
 
 Improved menu interface:
+-Added Turbo Vision GUI style
 -Added action to minimize all windows
 -Added setting to ignore mouse click to open the menu
 -Added more utf-8 characters support
